--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : Jackie Antelo
 description              : Jackie Antelo - Projects and CV 
-baseurl                  : "" # Set this to your repo name 
+baseurl                  : "/fall-2025-portfolio-Antelo/" # Set this to your repo name 
 
 # Theme and Style
 theme: jekyll-theme-minimal
